--- a/Program_Scheduler/EventView.xib
+++ b/Program_Scheduler/EventView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -11,7 +11,7 @@
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Ic9-bu-VuC"/>
                 <outlet property="startDateLabel" destination="Khl-Tg-VCW" id="twA-de-Sub"/>
-                <outlet property="titleLabel" destination="nj5-tD-94z" id="mZh-k2-3yU"/>
+                <outlet property="titleLabel" destination="nj5-tD-94z" id="qYm-FV-m7W"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
